[package]
name = "ors-sys"
edition = "2018"
version = "0.0.1"
authors = ["Haobo Gu <haobogu@outlook.com>"]
links = "onnxruntime"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"
ureq = "2.1"

# Used on Windows
zip = "0.5"

# Used on unix
flate2 = "1.0"
tar = "0.4"

[dependencies]
libloading = "0.7.1"
lazy_static = "1.4.0"