[package]
name = "ors-sys"
edition = "2018"
version = "0.0.5"
authors = ["Haobo Gu <haobogu@outlook.com>"]
links = "onnxruntime"
license = "MIT OR Apache-2.0"
description = "ors-sys - low level onnxruntime bindings for rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.2"
ureq = "2.4"

# Used on Windows
zip = "0.6.2"

# Used on unix
flate2 = "1.0"
tar = "0.4"

[dependencies]
libloading = {version = "0.7", optional = true}

[features]
# Load onnxruntime at runtime, not compile time
default = ["dynamic-loading"]
dynamic-loading = ["libloading"] 